# ClarityQL

./: LICENSE  README.md
clarity/: codeql-extractor.yml
clarity/extractor/: Cargo.toml  rust-toolchain.toml
clarity/extractor-pack/tools/: autobuild.cmd  autobuild.sh  index-files.cmd  qltest.cmd  qltest.sh
clarity/extractor/src/: autobuilder.rs  extractor.rs  generator.rs
clarity/ql/lib/: clarity.dbscheme  qlpack.yml
clarity/ql/lib/codeql/: Locations.qll  assertBlockHeight.qll  callInsideAsContract.qll  detectors.ql  divideBeforeMultiply.qll  listfiles.ql  privateFunctionNotUsed.qll  txSenderInAssert.qll  unusedArguments.qll  unusedLetVariables.qll  unwrapPanicUsage.qll  updatedFunctions.qll  varCouldBeConstant.qll
clarity/ql/lib/codeql/clarity/ast/: basicNativeForm.qll  contractFunctionCall.qll  functionCall.qll  functionDefinition.qll  functionParameter.qll  functionSignature.qll  functionSignatureForTrait.qll  letExpression.qll  literal.qll  parameter.qll  traitDefinition.qll  variableDefinition.qll
clarity/ql/lib/codeql/clarity/ast/internal/: TreeSitter.qll
clarity/ql/lib/codeql/clarity/ideContextual/: printAst.qll
clarity/ql/lib/ide-contextual-queries/: printAst.ql
clarity/scripts/: create-extractor-pack.ps1  create-extractor-pack.sh  generate_model.py
clarity/tools/: index-files.sh
docs/: Contributing.md
