[workspace]
[package]
name = "codeql-extractor-clarity"
description = "CodeQL Clarity extractor"
version = "0.1.0"
authors = ["GitHub"]
edition = "2021"

# When updating these dependencies, run `misc/bazel/3rdparty/update_cargo_deps.sh`
[dependencies]
tree-sitter = ">= 0.23.0"
tree-sitter-embedded-template = "0.23.2"
tree-sitter-clarity = { git = "https://github.com/xlittlerag/tree-sitter-clarity.git", rev = "7fa54825fdd971a1a676f885384f024fe2b7384a" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon = "1.10.0"
regex = "1.11.1"
encoding = "0.2"
lazy_static = "1.5.0"

codeql-extractor = { path = "../../shared/tree-sitter-extractor" }
